--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-mocker-extension",
+  "name": "mockapi-extension",
   "version": "1.0.0",
   "description": "Chrome extension for mocking API requests",
   "scripts": {
