--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "webpack --mode production",
     "dev": "webpack --mode development --watch",
     "clean": "rm -rf dist",
-    "analyze": "webpack --mode production --analyze"
+    "analyze": "webpack --mode production --analyze",
+    "package": "npm run build && cd dist && zip -r ../mockapi-extension.zip . && cd .. && ls -lh mockapi-extension.zip"
   },
   "keywords": [
     "chrome-extension",
