feat: Add ESLint/Prettier setup and duplicate rule feature
- Setup ESLint with TypeScript and React rules
- Add Prettier for code formatting
- Add lint, lint:fix, format, format:check, and type-check scripts
- Fix all linting errors and format entire codebase
- Implement duplicate rule functionality with Copy button
- Add i18n translations for duplicate feature (EN/RU)
- Update manifest.json with privacy policy URL

--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "webpack --mode development --watch",
     "clean": "rm -rf dist",
     "analyze": "webpack --mode production --analyze",
-    "package": "npm run build && cd dist && zip -r ../mockapi-extension.zip . && cd .. && ls -lh mockapi-extension.zip"
+    "package": "npm run build && cd dist && zip -r ../mockapi-extension.zip . && cd .. && ls -lh mockapi-extension.zip",
+    "lint": "eslint 'src/**/*.{ts,tsx}'",
+    "lint:fix": "eslint 'src/**/*.{ts,tsx}' --fix",
+    "format": "prettier --write 'src/**/*.{ts,tsx,css,json}'",
+    "format:check": "prettier --check 'src/**/*.{ts,tsx,css,json}'",
+    "type-check": "tsc --noEmit"
   },
   "keywords": [
     "chrome-extension",
@@ -21,12 +26,19 @@
     "@types/chrome": "^0.0.256",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.23",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^7.1.2",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "mini-css-extract-plugin": "^2.9.4",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
+    "prettier": "^3.2.4",
     "tailwindcss": "^4.1.18",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
