feat: Major update to MockAPI extension (v2.0.0)
- Redesigned architecture for improved API request mocking using client-side JavaScript interception.
- Added support for custom status codes, response delays, and enhanced debugging features.
- Updated README to reflect new features and improvements.
- Introduced new icons for the extension.
- Removed deprecated permissions and updated manifest for better performance.
- Implemented content script for rule updates and request logging.
- Enhanced Rule Editor UI for better user experience.
- Added interceptor script to handle fetch and XMLHttpRequest interception.
- Improved performance logging and error handling throughout the extension.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mockapi-extension",
-  "version": "1.2.0",
-  "description": "Chrome extension for mocking API requests",
+  "version": "2.0.0",
+  "description": "Chrome extension for mocking API requests with full control over status codes, delays, and responses",
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack --mode development --watch",
