chore: release v2.0.1 with bug fixes, helpers refactoring, and expanded test coverage
### Fixed
- Duplicate request logging in recording tab (removed redundant webRequest listener)
- Request logging now exclusively handled by interceptor

### Changed
- Migrated from custom UUID to industry-standard uuid library (v4)
- Refactored helper functions into organized src/helpers/ modules:
  - urlMatching.ts - URL pattern matching (exact, wildcard, regex)
  - validation.ts - Input validation (JSON)
  - formatting.ts - Date/time formatting
  - filtering.ts - Request filtering
  - string.ts - String utilities (regex escaping)
  - index.ts - Convenience exports
- Updated all imports across codebase to use helpers
- Removed ~150 lines of dead code (responseGenerator.ts, unused utils)

### Added
- 56 new unit tests across 3 test suites:
  - contextHandler.test.ts (7 tests) - Extension context handling
  - urlMatching.test.ts (36 tests) - URL matching logic
  - i18n.test.ts (20 tests) - Translation validation
- Total: 78 tests (up from 22)
- Test coverage: utils 100%, contextHandler 100%, storage 85%

### Dependencies
- uuid@^13.0.0
- @types/uuid@^10.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mockapi-extension",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Chrome extension for mocking API requests with full control over status codes, delays, and responses",
   "scripts": {
     "build": "webpack --mode production",
@@ -42,6 +42,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.23",
@@ -71,6 +72,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "uuid": "^13.0.0"
   }
 }
