--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "MockAPI",
+  "name": "Moq",
   "version": "2.7.1",
   "description": "Mock API requests for testing and development. Intercept and modify network requests with custom responses, status codes and delays.",
   "privacy_policy": "https://github.com/PavelShpakovich/mock-ext/blob/main/PRIVACY.md",
