feat: add response hook functionality to modify responses dynamically
- Introduced a new `responseHook` property in `MockRule` to allow JavaScript code execution for modifying responses.
- Added `responseMode` enum to differentiate between mock responses and passthrough behavior.
- Implemented validation for response hooks to ensure safe execution.
- Updated UI components to support response hook configuration, including enabling/disabling hooks and providing context for available helper functions.
- Enhanced existing components like `TextArea`, `Toggle`, and `Toast` for better user experience and consistency.
- Created a new `responseHook.ts` helper file to manage response hook execution and validation.
- Added constants for validation and response body limits to improve maintainability.
- Updated localization files to include new strings related to response hooks and modes.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moq-extension",
-  "version": "2.7.3",
+  "version": "2.8.0",
   "description": "Chrome extension for mocking API requests with full control over status codes, delays, and responses",
   "scripts": {
     "build": "webpack --mode production",
@@ -60,7 +60,7 @@
     "mini-css-extract-plugin": "^2.9.4",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "tailwindcss": "^4.1.18",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
@@ -69,7 +69,9 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "acorn": "^8.15.0",
     "clsx": "^2.1.1",
+    "eslint-scope": "^9.1.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
