Refactor RuleEditor and RuleResponseSection components to remove XML handling; enhance response hook validation with security checks; normalize content type detection; improve regex validation; update translations for validation errors; implement error boundaries in popup; streamline message action types; adjust TypeScript configuration for better type support.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
-    "types": ["chrome"]
+    "types": ["chrome", "jest", "node"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
