--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,8 @@
     ],
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
-    "no-console": ["warn", { "allow": ["warn", "error"] }]
+    "no-console": ["warn", { "allow": ["warn", "error"] }],
+    "no-nested-ternary": "error"
   },
   "settings": {
     "react": {
